--- a/Xamarin.Android.RecyclerView.Presenter/RecyclerView.Presenter.csproj
+++ b/Xamarin.Android.RecyclerView.Presenter/RecyclerView.Presenter.csproj
@@ -59,9 +59,6 @@
     <Reference Include="Xamarin.Android.Support.Annotations">
       <HintPath>..\packages\Xamarin.Android.Support.Annotations.27.0.2.1\lib\MonoAndroid81\Xamarin.Android.Support.Annotations.dll</HintPath>
     </Reference>
-    <Reference Include="Xamarin.Android.Arch.Core.Common">
-      <HintPath>..\packages\Xamarin.Android.Arch.Core.Common.1.0.0.1\lib\MonoAndroid80\Xamarin.Android.Arch.Core.Common.dll</HintPath>
-    </Reference>
     <Reference Include="Xamarin.Android.Arch.Lifecycle.Common">
       <HintPath>..\packages\Xamarin.Android.Arch.Lifecycle.Common.1.0.3.1\lib\MonoAndroid80\Xamarin.Android.Arch.Lifecycle.Common.dll</HintPath>
     </Reference>
@@ -81,25 +78,28 @@
       <HintPath>..\packages\MisterJimson.Cheeseknife.1.1.0\lib\MonoAndroid10\Cheeseknife.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Xamarin.Android.Arch.Core.Common">
+      <HintPath>..\packages\Xamarin.Android.Arch.Core.Common.1.0.0.1\lib\MonoAndroid80\Xamarin.Android.Arch.Core.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="com\exozet\recyclerview\Presenter.cs" />
-    <Compile Include="com\exozet\recyclerview\PresenterAdapter.cs" />
-    <Compile Include="com\exozet\recyclerview\StabbedViewHolder.cs" />
-    <Compile Include="com\exozet\recyclerview\PresenterViewModel.cs" />
-    <Compile Include="com\exozet\recyclerview\IViewHolder.cs" />
-    <Compile Include="com\exozet\recyclerview\Item.cs" />
-    <Compile Include="com\exozet\recyclerview\IPresenter.cs" />
+    <Compile Include="net\kibotu\recyclerview\IPresenter.cs" />
+    <Compile Include="net\kibotu\recyclerview\Item.cs" />
+    <Compile Include="net\kibotu\recyclerview\IViewHolder.cs" />
+    <Compile Include="net\kibotu\recyclerview\Presenter.cs" />
+    <Compile Include="net\kibotu\recyclerview\PresenterAdapter.cs" />
+    <Compile Include="net\kibotu\recyclerview\PresenterViewModel.cs" />
+    <Compile Include="net\kibotu\recyclerview\StabbedViewHolder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="com\" />
-    <Folder Include="com\exozet\" />
-    <Folder Include="com\exozet\recyclerview\" />
+    <Folder Include="net\" />
+    <Folder Include="net\kibotu\" />
+    <Folder Include="net\kibotu\recyclerview\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets')" />
