--- a/Xamarin.Android.RecyclerView.Presenter/RecyclerView.Presenter.csproj
+++ b/Xamarin.Android.RecyclerView.Presenter/RecyclerView.Presenter.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Xamarin.Android.RecyclerView.Presenter</RootNamespace>
     <AssemblyName>Xamarin.Android.RecyclerView.Presenter</AssemblyName>
-    <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
@@ -17,14 +17,14 @@
     <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
     <PackOnBuild>true</PackOnBuild>
     <PackageId>Xamarin.Android.RecyclerView.Presenter</PackageId>
-    <PackageVersion>1.1.0</PackageVersion>
+    <PackageVersion>1.1.2</PackageVersion>
     <Authors>kibotu</Authors>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseUrl>https://github.com/kibotu/Xamarin.Android.RecyclerView.Presenter/blob/master/LICENSE</PackageLicenseUrl>
     <Owners>kibotu</Owners>
     <PackageProjectUrl>https://github.com/kibotu/Xamarin.Android.RecyclerView.Presenter</PackageProjectUrl>
-    <PackageReleaseNotes>1.0.1
-- added OnItemClickListener</PackageReleaseNotes>
+    <PackageReleaseNotes>1.1.2
+reduced object creation</PackageReleaseNotes>
     <Summary>Convenience library to handle different view types with different presenters in a single RecyclerView.</Summary>
     <PackageTags>Xamarin.Android.RecyclerViewPresenter</PackageTags>
     <Title>Xamarin.Android.RecyclerView.Presenter</Title>
