--- a/Xamarin.Android.RecyclerView.Presenter/packages.config
+++ b/Xamarin.Android.RecyclerView.Presenter/packages.config
@@ -3,11 +3,15 @@
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="monoandroid81" />
   <package id="MisterJimson.Cheeseknife" version="1.1.0" targetFramework="monoandroid81" />
   <package id="NuGet.Build.Packaging" version="0.2.2" targetFramework="monoandroid81" developmentDependency="true" />
-  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Annotations" version="27.0.2.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Compat" version="27.0.2.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Core.UI" version="27.0.2.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.AndroidX.Annotation" version="1.1.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Arch.Core.Common" version="2.1.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Collection" version="1.1.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Core" version="1.2.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.CustomView" version="1.0.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Lifecycle.Common" version="2.2.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Lifecycle.Runtime" version="2.2.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Migration" version="1.0.7" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.MultiDex" version="2.0.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.RecyclerView" version="1.1.0.2" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.VersionedParcelable" version="1.1.1.2" targetFramework="monoandroid90" />
 </packages>
